--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="yui-gc">
                     <div class="yui-u first">
                         <strong class="text-3xl">Burhan YUCEL</strong>
-                        <h2>AWS Cloud & DevOps Engineer & WebDev </h2>
+                        <h2>AWS Cloud & DevOps Engineer & Web Development </h2>
                         <div class="contact-info mt-4">
                             <ul class="list-none">
                                 <li class="mb-1 list-none"><i class="fa fa-envelope mr-2 text-blue-400"></i><a
@@ -52,7 +52,7 @@
                     </div>
 
                     <div class="yui-u">
-                        <img src="./me.jpg" alt="Mubashar Khokhar" class="h-[250px] border rounded-full" />
+                        <img src="./me.jpg" alt="Mubashar Khokhar" class="h-[220px] border rounded-full" />
                     </div>
                 </div><!--// .yui-gc -->
             </div><!--// hd -->
@@ -69,7 +69,7 @@
                             <li>SQL (MySQL, PostgreSQL)</li>
                             <li>No-SQL (MongoDB)</li>
                             <li>Developing RESTful API</li>
-                            <li>Proggraming Languages(Typescript, Python, Bash)</li>
+                            <li>Typescript, Python, Bash</li>
                             <li>Project & Team Management</li>
                             <li>Infrastructure as Code (IaC)</li>
                             <li>GitLab Runner Management</li>
@@ -90,11 +90,7 @@
                     </div>
                 </div><!--// .yui-gf-->
 
-                <div class="grid grid-cols-6 border-b border-gray-300 pb-4 mb-3 align-middle	">
-                    <h2 class="text-lg font-bold">Languages</h2>
-                    <div class="col-span-2 pt-1">English (Fluent / Professional)</div>
-                    <div class="col-span-2 pt-1">Deutsch (Telc C1 / Verhandlungssicher)</div>
-                </div>
+
 
                 <div class="grid grid-cols-6 mt-5 border-b mb-5">
 
@@ -104,7 +100,7 @@
                         <div class="job">
                             <h3 class="font-bold">DevOps Enginner & Full Stack Developer</h3>
                             <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Nioyatech</h2>
-                            <h4>Dec 2021 - Aug 2024</h4>
+                            <h4>Dec 2022 - Aug 2024</h4>
                             <ul class="list-disc my-3 ml-5">
                                 <li>
                                     Developing and managing Real-Estate web app for local vendor using React, Node.js,
@@ -123,14 +119,18 @@
 
                                 </li>
                                 <li>
-                                    Created a Petclinic App for microservice architecture with Spring Boot, EKS, ECR, Docker, Route 53,  
+                                    Created a Petclinic App for microservice architecture with Spring Boot, EKS, ECR,
+                                    Docker, Route 53,
                                     https://github.com/yucel1993/petclinic-microservices-with-db
                                 </li>
                                 <li>
-                                    <strong>Tech stack:</strong> React, Node.js, AWS, Dockers, Shell, MongoDB, EKS, ECR, Route 53, 
+                                    <strong>Tech stack:</strong> React, Node.js, AWS, Dockers, Shell, MongoDB, EKS, ECR,
+                                    Route 53,
                                 </li>
                             </ul>
                         </div>
+
+                    
 
                         <div class="job">
                             <h3 class="font-bold">Team Leader & Project Management</h3>
@@ -161,26 +161,32 @@
                     </div><!--// .yui-u -->
                 </div><!--// .yui-gf -->
 
+                <div class="grid grid-cols-6 border-b border-gray-300 pb-4 mb-3 align-middle	">
+                    <h2 class="text-lg font-bold">Languages</h2>
+                    <div class="col-span-2 pt-1">English (Fluent / Professional)</div>
+                    <div class="col-span-2 pt-1">Deutsch (Telc C1 / Verhandlungssicher)</div>
+                </div>
+
                 <div class="grid grid-cols-7 border-b border-gray-300 pb-4 mb-3 align-middle	">
                     <h2 class="text-lg font-bold">Projects</h2>
                     <div class="pt-1 col-span-2 pl-6">
                         <ul>
                             <li><a href="https://questionary-lovat.vercel.app" target="_blank"
-                                    class="hover:underline">https://Social Information Sharing Platform</a>
+                                    class="hover:underline">https://contibution.com</a>
                             </li>
                         </ul>
                     </div>
                     <div class="pt-1 col-span-2">
                         <ul>
-                            <li><a href="https://voyagerv2.netlify.app/" target="_blank" class="hover:underline">https://Voyager
-                                    Tour Guidance</a>
+                            <li><a href="https://voyagerv2.netlify.app/" target="_blank"
+                                    class="hover:underline">https://voyager.com</a>
                             </li>
                         </ul>
                     </div>
                     <div class="pt-1 col-span-2">
                         <ul>
                             <li><a href="https://stockappclone.vercel.app/" target="_blank"
-                                    class="hover:underline">https://Stock Management Proggram for retailers or local vendors</a>
+                                    class="hover:underline">https://stockeeper.com</a>
                             </li>
                         </ul>
                     </div>
@@ -188,8 +194,9 @@
 
 
                 <div class="grid grid-cols-6 border-b border-gray-300 pb-4 mb-3 align-middle	">
-                    <h2 class="text-lg font-bold">Certifications</h2>
-                    <div class="col-span-2 pt-1 pl-4">AWS Certified Solutions Architect - Associate</div>
+                    <h2 class="text-lg font-bold">Certs</h2>
+                    <div class="col-span-2 pt-1 pl-4 aws-certification">AWS Certified Solutions Architect - Associate
+                    </div>
                 </div>
 
 
@@ -198,6 +205,19 @@
                     <h2 class="text-lg font-bold">Education</h2>
 
                     <div class="col-span-5">
+                        <div class="job">
+                            <h3 class="font-bold">AWS Cloud & DevOps & Web Development</h3>
+                            <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Clarusway IT School
+                            </h2>
+                            <h4>Oct 2022 - Aug 2024 </h4>
+                            <ul class="list-disc my-3 ml-5">
+                                <li><strong>Program Focus:</strong> Developing apps and websites using MERN stack,
+                                    Next.js, or Spring Boot.
+                                    Deployed with AWS Serverless or ECS, ECR (Microservices).
+                                </li>
+
+                            </ul>
+                        </div>
                         <div class="job">
                             <h3 class="font-bold">Masters Project Management</h3>
                             <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">BSBI,
@@ -214,8 +234,9 @@
                             </ul>
                         </div>
                         <div class="job border-b-0">
-                            <h3 class="font-bold">BS Mecanical Science</h3>
-                            <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Turkish Defence Univercity,
+                            <h3 class="font-bold">BS in Mechanical Engineering</h3>
+                            <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Turkish Defence
+                                University,
                                 Ankara - Turkey</h2>
                             <h4>Sep 2011 - Aug 2011</h4>
                             <ul class="list-disc my-3 ml-5">
