--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
                             <h4>Jan 2024 - July 2024</h4>
                             <ul class="list-disc my-3 ml-5">
                                 <li>
-                                    Created a Stock Management App with React - Redux - Node.js - Express.js - MongoDB.
+                                    Created a Stock Management App for local vendors with React - Redux - Node.js - Express.js - MongoDB.
                                     <a href="https://stockappclone.vercel.app/" target="_blank"
-                                    class="hover:underline text-blue-400">https://stockeeper.com</a>
+                                    class="hover:underline text-blue-400">https://stockkeeper.com</a>
                                  
                                 </li>
                                 <li>
-                                 Created a SASS with Next.js App for the students which enables them to save their notes into the App.
+                                 Created a SASS App with Next.js  for the students which enables them to save their notes into the App.
                                  <a href="https://questionary-lovat.vercel.app" target="_blank"
                                     class="hover:underline text-blue-400">https://contibution.com</a>
                                 </li>
