--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="">
                     <div class=" flex gap-20 border-b border-gray-300 pb-4 mb-3">
                         <h2 class="text-lg font-bold">Skills</h2>
-                        <ul class=" col-span-2">
+                        <ul class=" ">
                             <li>Programing Languages : Java - Python - Javascript - Typescript - Bash - Linux</li>
                             <li>Frontend : React - Next.js - Redux - Tailwind - MUI </li>
                             <li>Backend : Node.js - Express.js - Spring - SpringBoot</li>
@@ -86,7 +86,7 @@
                     <div class="col-span-5">
                         <div class="job">
                             <h3 class="font-bold">DevOps Enginner</h3>
-                            <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Nioyatech</h2>
+                            <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Nioyatech LLC Part Time</h2>
                             <h4>Nov 2024 - Jan 2025</h4>
                             <ul class="list-disc my-3 ml-5">
                                
@@ -113,7 +113,7 @@
 
                         <div class="job">
                             <h3 class="font-bold">DevOps Enginner</h3>
-                            <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Alta Vitus GmbH</h2>
+                            <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Alta Vitus GmbH Full Time</h2>
                             <h4>Sep 2024 - Nov 2024</h4>
                             <ul class="list-disc my-3 ml-5">
                                 <li>
@@ -136,8 +136,8 @@
                             </ul>
                         </div>
                         <div class="job">
-                            <h3 class="font-bold">Full Stack Developer</h3>
-                            <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Freelancer.com</h2>
+                            <h3 class="font-bold">Full Stack Developer </h3>
+                            <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Freelancer.com Part Time</h2>
                             <h4>Jan 2024 - July 2024</h4>
                             <ul class="list-disc my-3 ml-5">
                                 <li>
