--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                     Berlin  Germany
                                 </li>
                                 <li class="mb-1 list-none"><i class="fa-brands fa-linkedin mr-2 text-[#0a66c2]"></i><a
-                                        href="www.linkedin.com/in/burhan-yucel" target="_blank">Linkedn 🎗️</a>
+                                        href="https://www.linkedin.com/in/burhan-yucel/" target="_blank">Linkedn 🎗️</a>
                                 </li>
                                 <li class="mb-1 list-none"><i class="fa-brands fa-github mr-2"></i><a target="_blank"
                                         href="https://github.com/yucel1993">GitHub ✨</a></li>
@@ -251,7 +251,7 @@
                         
                         <div class="job border-b-0">
                             <h3 class="font-bold">B.Sc. Maschinenwissenschaften</h3>
-                            <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Türkische Verteidigungsuniversität,</h2>
+                            <h2 class="font-bold text-slate-500" style="color:rgb(100,116,139);">Türkische Verteidigungsuniversität</h2>
                             <h4>Sep. 2011 - Aug. 2015</h4>
                             <ul class="list-disc my-3 ml-5">
                                 <li><strong>Thema der Bachelorarbeit:</strong> Optimierung des Kraftstoffverbrauchs bei Hybridfahrzeugen
